--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -328,13 +328,79 @@
                         <h4>Energía: Fósil</h4>
                     </div>
                     <div id="renaDesc3">
-                        <p>El control de velocidad crucero, su maletero de 800[L] que puede alcanzar los 3000[L] rebatiendo los asientos traseros y su seguridad lo hacen perfecto para viajar acompañado, </p>
+                        <p>El control de velocidad crucero, su maletero de 800[L] que puede alcanzar los 3000[L] rebatiendo los asientos traseros y su seguridad lo hacen perfecto para viajar acompañado</p>
                     </div>
                 </div>
             </div>
         </div>
         <div id="ford">
-
+            <h2>Ford</h2>
+            <div id="ford1">
+                <div id="fordImg1">
+                    <img src="../../assets/imagenes/tienda/autos/fordSUV'STERRITORY.png" alt="">
+                </div>
+                <div id="fordDatos1">
+                    <div id="fordModelo1">
+                        <h4>Modelo: SUV'S TERRITORY</h4>
+                    </div>
+                    <div id="fordPrecio1">
+                        <h4>$39.923.700</h4>
+                    </div>
+                    <div id="fordToTerr1">
+                        <h4>Todoterreno: NO</h4>
+                    </div>
+                    <div id="fordEnergia1">
+                        <h4>Energia: Fósil</h4>
+                    </div>
+                    <div id="fordDesc1">
+                        <p>Debido a sus espejos laterales rebatibles eléctricamente, barras de techo longitudinales, techo solar panorámico y tapizado de cuero microperforado, es perfecto para cualquier aventura</p>
+                    </div>
+                </div>
+            </div>
+            <div id="ford2">
+                <div id="fordImg2">
+                    <img src="../../assets/imagenes/tienda/autos/fordMUSTANG MACH-E.jpg" alt="">
+                </div>
+                <div id="fordDatos2">
+                    <div id="fordModelo2">
+                        <h4>Modelo: MUSTANG MACH-E</h4>
+                    </div>
+                    <div id="fordPrecio2">
+                        <h4>$108.700.000</h4>
+                    </div>
+                    <div id="fordToTerr2">
+                        <h4>Todoterreno: NO</h4>
+                    </div>
+                    <div id="fordEnergia2">
+                        <h4>Energia: Eléctrica</h4>: 
+                    </div>
+                    <div id="fordDesc2">
+                        <p>Además de un baúl trasero de 402 [L], cuanta con uno delantero de 139.5 [L]; sus puertas se abren con un botón, asi puedes entrar aún con cosas en la mano</p>
+                    </div>
+                </div>
+            </div>
+            <div id="ford3">
+                <div id="fordImg3">
+                    <img src="../../assets/imagenes/tienda/autos/fordNUEVA F-150 LARIAT.jpg" alt="">
+                </div>
+                <div id="fordDatos3">
+                    <div id="fordModelo3">
+                        <h4>Modelo: NUEVA F-150 LARIAT</h4>
+                    </div>
+                    <div id="fordPrecio3">
+                        <h4>$107.738.550</h4>
+                    </div>
+                    <div id="fordToTerr3">
+                        <h4>Todoterreno: SI</h4>
+                    </div>
+                    <div id="fordEnergia3">
+                        <h4>Energía: Híbrida</h4>
+                    </div>
+                    <div id="fordDesc3">
+                        <p>Su parrilla prominente, cromada y divida en dos demuestra su robustez y tradicionalidad y sus focos en forma de cuadrado le dan cuerpo al frente</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="fiat">
             <div id="fiatImg">
