--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -475,67 +475,67 @@
             <h2>Nissan</h2>
             <div id="niss1">
                 <div id="nissImg1">
-                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/nissanVERSA.jpg" alt="">
                 </div>
                 <div id="nissDatos1">
                     <div id="nissModelo1">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: VERSA</h4>
                     </div>
                     <div id="nissPrecio1">
-                        <h4>$</h4>
+                        <h4>$25.697.600</h4>
                     </div>
                     <div id="nissToTerr1">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: NO</h4>
                     </div>
                     <div id="nissEnergia1">
                         <h4>Energia: Fósil</h4>
                     </div>
                     <div id="nissDesc1">
-                        <p></p>
+                        <p>Su parrilla frontal en forma de lineas unidas a los focos frontales dan un aspecto continuo al frente y con 5 velocidades y un baúl de 482[L] busca darte toda la comodidad</p>
                     </div>
                 </div>
             </div>
             <div id="niss2">
                 <div id="nissImg2">
-                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/nissanFRONTIER.jpg" alt="">
                 </div>
                 <div id="nissDatos2">
                     <div id="nissModelo2">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: FRONTIER</h4>
                     </div>
                     <div id="nissPrecio2">
-                        <h4>$</h4>
+                        <h4>$41.466.000</h4>
                     </div>
                     <div id="nissToTerr2">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: SI</h4>
                     </div>
                     <div id="nissEnergia2">
                         <h4>Energia: Fósil</h4>: 
                     </div>
                     <div id="nissDesc2">
-                        <p></p>
+                        <p>Su frente tiene todas las caracteristicas del tipo agresivas, una parrilla en forma de panal unido a focos alargados pero robustos y luces laterales semi cuadradas</p>
                     </div>
                 </div>
             </div>
             <div id="niss3">
                 <div id="nissImg3">
-                    <img src="../../assets/imagenes/tienda/autos" alt="">
+                    <img src="../../assets/imagenes/tienda/autos/nissanX-TRAIL.jpg" alt="">
                 </div>
                 <div id="nissDatos3">
                     <div id="nissModelo3">
-                        <h4>Modelo: </h4>
+                        <h4>Modelo: X-TRAIL</h4>
                     </div>
                     <div id="nissPrecio3">
-                        <h4>$</h4>
+                        <h4>$68.780.000</h4>
                     </div>
                     <div id="nissToTerr3">
-                        <h4>Todoterreno: </h4>
+                        <h4>Todoterreno: SI</h4>
                     </div>
                     <div id="nissEnergia3">
                         <h4>Energía: Fósil</h4>
                     </div>
                     <div id="nissDesc3">
-                        <p></p>
+                        <p>Cn espacio para hasta 8 pasajeros y asientos de la 3ra y 2da fila revatibles te da la opción de tener 600[L] o 1300[L] con los asientos rebatidos</p>
                     </div>
                 </div>
             </div>
