puse mal el sync

--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -53,7 +53,7 @@
 
     <main id="mainVA">
         <div id="contenedorh1VA">
-            <h1>Venda su auto</h1>
+            <h1 id="h1va">Venda su auto</h1>
         </div>
 
         <div id="contenedorvaformulario" class="form-container">
