Honda y diseño responsive terminado - Comienzo Audi

--- a/paginas/tienda/autos-productos/2Honda/prod-1.html
+++ b/paginas/tienda/autos-productos/2Honda/prod-1.html
@@ -53,7 +53,7 @@
     <main class="prods__main">
         <div class="row prods__encabezado">
             
-            <div id="prod_1Car" class="carousel slide col-lg-6 prods__carrusel">
+            <div id="prod_1Car" class="carousel slide col-lg-6 col-md-12 col-sm-12 prods__carrusel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -77,61 +77,61 @@
                 </div>
                 <div class="carousel-inner prods__carrusel-cont">
                     <div class="carousel-item active">
-                        <img src="../../../../assets/imagenes/prod-4/img1.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img1.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img2.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img2.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img3.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img3.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img4.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img4.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img5.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img5.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img6.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img6.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img7.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img7.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img8.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img8.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img9.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img9.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img10.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img10.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img11.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img11.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img12.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img12.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img13.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img13.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img14.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img14.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img15.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img15.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img16.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img16.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img17.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img17.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img18.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img18.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-4/img19.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img19.webp" class="d-block w-100" alt=":/">
                     </div>
 
                 </div>
@@ -145,7 +145,7 @@
                 </button>
             </div>
 
-            <div class="col-lg-6 prods__info">
+            <div class="col-lg-6 col-md-12 col-sm-12 prods__info">
                 <div class="prods__volver">
                     <a href="../autos.html">Volver</a>
                 </div>
