--- a/paginas/tienda/autos-productos/2Honda/prod-2.html
+++ b/paginas/tienda/autos-productos/2Honda/prod-2.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chevrolet Onix Joy Plus</title>
+    <title>Honda HR-V</title>
 </head>
 <body>
     <header>
@@ -53,7 +53,7 @@
     <main class="prods__main">
         <div class="row prods__encabezado">
             
-            <div id="prod_1Car" class="carousel slide col-lg-6 prods__carrusel">
+            <div id="prod_1Car" class="carousel slide col-lg-6 col-md-12 col-sm-12 prods__carrusel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -62,32 +62,28 @@
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="4" aria-label="Slide 5"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="5" aria-label="Slide 6"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="6" aria-label="Slide 7"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="7" aria-label="Slide 8"></button>
                 </div>
                 <div class="carousel-inner prods__carrusel-cont">
                     <div class="carousel-item active">
-                        <img src="../../../../assets/imagenes/prod-3/img1.png" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img1.png" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img2.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img2.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img3.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img3.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img4.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img4.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img5.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img5.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img6.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img6.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img7.jpg" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-3/img8.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-2/img7.webp" class="d-block w-100" alt=":/">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#prod_1Car" data-bs-slide="prev">
@@ -100,15 +96,15 @@
                 </button>
             </div>
 
-            <div class="col-lg-6 prods__info">
+            <div class="col-lg-6 col-md-12 col-sm-12 prods__info">
                 <div class="prods__volver">
                     <a href="../autos.html">Volver</a>
                 </div>
-                <h2>Chevrolet Onix Joy Plus</h2>
+                <h2>Honda HR-V</h2>
                 <table>
                     <tr>
                         <td>|Modelo:</td>
-                        <td class="prods__dato">2013</td>
+                        <td class="prods__dato">2024</td>
                     </tr>
                     <tr>
                         <td>|Traccion:</td>
@@ -124,15 +120,15 @@
                     </tr>
                     <tr>
                         <td>|Condicion:</td>
-                        <td class="prods__dato">Usado</td>
+                        <td class="prods__dato">Nuevo</td>
                     </tr>
                     <tr>
                         <td>|Kilometraje:</td>
-                        <td class="prods__dato">74.000Km</td>
+                        <td class="prods__dato">0Km</td>
                     </tr>
                     <tr>
                         <td>|Cilindrada</td>
-                        <td class="prods__dato">1,4</td>
+                        <td class="prods__dato">1,5</td>
                     </tr>
                 </table>
                 <div class="prods__contacto">    
@@ -146,7 +142,7 @@
         </div>
 
         <div class="row prods__descripcion">
-            <p>La segunda generación del Onix se volvió global y eso significó que ahora todos los modelos llevarán ese nombre, ya sean hatchback o sedán. Es por esto que el Prisma pasa a llamarse Onix PLus. Chevrolet. El Chevrolet Onix Plus JOY no es otra cosa que el anterior Prisma que pasa a ocupar la entrada de gama de la marca con misma estética y equipamiento simplificado para garantizar un precio competitivo. Mecánica y seguridad se mantienen inalterados, ofreciendo en el segundo aspecto los elementos exigidos por ley como ABS y doble airbag.</p>
+            <p>Presentada en Brasil en julio de 2022, llega a Argentina desde ese país la nueva generación del Honda HR-V, SUV para el segmento B que se posiciona por debajo del flamante ZR-V. El nuevo HR-V llega al país con el objetivo de cubrir la entrada de gama de la marca utilizando un motor 1.5L 16V I-VTEC® de 121 CV y 145 Nm asociado a caja automática del tipo CVT con modo Sport y levas al volante (en la versión más equipada). Además del gran espacio interior se destaca por la dotación de seguridad con pack completo de ADAS.</p>
         </div>
     </main>
 </body>
