--- a/paginas/tienda/autos-productos/1Chevrolet/prod-3.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-3.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chevrolet CRUZE RS</title>
+    <title>Chevrolet Onix Joy Plus</title>
 </head>
 <body>
     <header>
@@ -53,7 +53,7 @@
     <main class="prods__main">
         <div class="row prods__encabezado">
             
-            <div id="prod_1Car" class="carousel slide col-lg-6 prods__carrusel">
+            <div id="prod_1Car" class="carousel slide col-lg-6 col-md-12 col-sm-12 prods__carrusel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -63,47 +63,31 @@
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="5" aria-label="Slide 6"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="6" aria-label="Slide 7"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="7" aria-label="Slide 8"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="8" aria-label="Slide 9"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="9" aria-label="Slide 10"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="10" aria-label="Slide 11"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="11" aria-label="Slide 12"></button>
                 </div>
                 <div class="carousel-inner prods__carrusel-cont">
                     <div class="carousel-item active">
-                        <img src="../../../../assets/imagenes/prod-1/img1.png" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img1.png" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img2.png" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img2.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img3.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img3.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img4.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img4.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img5.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img5.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img6.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img6.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img7.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img7.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img8.jpg" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img9.jpg" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img10.jpg" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img11.jpg" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prod-1/img12.jpg" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/1Chevrolet/prod-1-3/img8.jpg" class="d-block w-100" alt=":/">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#prod_1Car" data-bs-slide="prev">
@@ -116,15 +100,15 @@
                 </button>
             </div>
 
-            <div class="col-lg-6 prods__info">
+            <div class="col-lg-6 col-md-12 col-sm-12 prods__info">
                 <div class="prods__volver">
                     <a href="../autos.html">Volver</a>
                 </div>
-                <h2>Chevrolet CRUZE RS</h2>
+                <h2>Chevrolet Onix Joy Plus</h2>
                 <table>
                     <tr>
                         <td>|Modelo:</td>
-                        <td class="prods__dato">2024</td>
+                        <td class="prods__dato">2013</td>
                     </tr>
                     <tr>
                         <td>|Traccion:</td>
@@ -132,19 +116,19 @@
                     </tr>
                     <tr>
                         <td>|Caja:</td>
-                        <td class="prods__dato">Automatica</td>
+                        <td class="prods__dato">Manual</td>
                     </tr>
                     <tr>
                         <td>|Combustible:</td>
-                        <td class="prods__dato">Diesel</td>
+                        <td class="prods__dato">Nafta</td>
                     </tr>
                     <tr>
                         <td>|Condicion:</td>
-                        <td class="prods__dato">Nuevo</td>
+                        <td class="prods__dato">Usado</td>
                     </tr>
                     <tr>
                         <td>|Kilometraje:</td>
-                        <td class="prods__dato">0Km</td>
+                        <td class="prods__dato">74.000Km</td>
                     </tr>
                     <tr>
                         <td>|Cilindrada</td>
@@ -162,7 +146,7 @@
         </div>
 
         <div class="row prods__descripcion">
-            <p>El Cruze RS forma parte de la familia Rally Sport de Chevrolet, y cuenta con toda la potencia para ser único. Más que una versión deportiva, en el Cruze RS todos los detalles hacen la diferencia, como las nuevas llantas oscurecidas de 17" y detalles en negro Ice Chrome en el frente. ¡Subite al tuyo!</p>
+            <p>La segunda generación del Onix se volvió global y eso significó que ahora todos los modelos llevarán ese nombre, ya sean hatchback o sedán. Es por esto que el Prisma pasa a llamarse Onix PLus. Chevrolet. El Chevrolet Onix Plus JOY no es otra cosa que el anterior Prisma que pasa a ocupar la entrada de gama de la marca con misma estética y equipamiento simplificado para garantizar un precio competitivo. Mecánica y seguridad se mantienen inalterados, ofreciendo en el segundo aspecto los elementos exigidos por ley como ABS y doble airbag.</p>
         </div>
     </main>
 </body>
