--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../../css/main.css">
@@ -371,7 +371,7 @@
                     <div id="fordImg2">
                         <img src="../../assets/imagenes/tienda/autos/fordMUSTANG MACH-E.jpg" alt="">
                     </div>
-                    <div id="fordDatos2">
+                    <a href="autos-productos/1Chevrolet/prod-1.html" id="test"><div id="fordDatos2">
                         <div id="fordModelo2">
                             <h4>Modelo: MUSTANG MACH-E</h4>
                         </div>
@@ -387,7 +387,7 @@
                         <div id="fordDesc2">
                             <p>Además de un baúl trasero de 402 [L], cuanta con uno delantero de 139.5 [L]; sus puertas se abren con un botón, asi puedes entrar aún con cosas en la mano</p>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div id="ford3">
                     <div id="fordImg3">
@@ -418,7 +418,7 @@
                     <div id="fiatImg1">
                         <img src="../../assets/imagenes/tienda/autos/fiatPULSE.jpg" alt="">
                     </div>
-                    <div id="fiatDatos1">
+                    <div id="fiatDatos1">   
                         <div id="fiatModelo1">
                             <h4>Modelo: PULSE</h4>
                         </div>
