listos los links a los autos y ya no mas 87 margin 0 y padding 0, que placer a la vista muchachos, este mensaje es larguisimo, por eso estoy escirbiendo esto, para hacerlo mas largo ajajajjajajajajajajajajajaajjajajajajaja

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title></title>
 </head>
 <body id="bodymain">
-    <header>
+    <header id="in__header">
 
         <div class="row container-fluid cont-logo">
             <img id="logomain" src="assets/imagenes/logo/logo.png" alt="">
