--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../../css/main.css">
@@ -69,7 +69,7 @@
         <div id="tieAut__Grid">
             <div id="honda">
                 <h2>Honda</h2>
-                <a href="autos-productos/2Honda/prod-1.html"><div id="honda1">
+                <div id="honda1"><a href="autos-productos/2Honda/prod-1.html">
                     <div id="hondaImg1">
                         <img src="../../assets/imagenes/tienda/autos/hondaZR-V.jpg" alt="">
                     </div>
@@ -90,8 +90,8 @@
                             <P>Frente llamativo con una rejilla en forma de panal, luces delanteras en ángulo y líneas de carrocería suavemente inclinadas, espacio para hasta cinco pasajeros </P>
                         </div>
                     </div>
-                </div></a>
-                <a href="autos-productos/2Honda/prod-2.html"><div id="honda2">
+                </a></div>
+                <div id="honda2"><a href="autos-productos/2Honda/prod-2.html">
                     <div id="hondaImg2">
                         <img src="../../assets/imagenes/tienda/autos/hondaNEW HR-V.jpg" alt="">
                     </div>
@@ -112,8 +112,8 @@
                             <p>Frente agresivo y moderno con parrilla prominente, luces led con sensor crepuscular, techo corredizo eléctrico, espacio para hasta cinco pasajeros o 2 con un gran baúl de hasta 1600[L]</p>
                         </div>
                     </div>
-                </div></a>
-                <a href="autos-productos/2Honda/prod-3.html"><div id="honda3">
+                </a></div>
+                <div id="honda3"><a href="autos-productos/2Honda/prod-3.html">
                     <div id="hondaImg3">
                         <img src="../../assets/imagenes/tienda/autos/hondaNEW CR-V2.jpg" alt="">
                     </div>
@@ -134,11 +134,11 @@
                             <p>Parrilla prominente, ópticas full LED con sensor crepúscular, asientos ergonómicos y plegables que permiten tres modos de utilización: Utility, Long y Tall; Espacio para 5 pasajeros </p>
                         </div>
                     </div>
-                </div></a>
+                </a></div>
             </div>
             <div id="audi">
                 <h2>Audi</h2>
-                <a href="autos-productos/3Audi/prod-1.html"><div id="audi1">
+                <div id="audi1"><a href="autos-productos/3Audi/prod-1.html">
                     <div id="audiImg1">
                         <img src="../../assets/imagenes/tienda/autos/audiA4 ALLROAD.jpg" alt="">
                     </div>
@@ -159,8 +159,8 @@
                             <p>Incorpora tecnologías de chasis y grupo motor que le permiten desenvolverse con soltura en cualquier terreno y en el interior disfrutarás de un amplio espacio</p>
                         </div>
                     </div>
-                </div></a>
-                <a href="autos-productos/3Audi/prod-2.html"><div id="audi2">
+                </a></div>
+                <div id="audi2"><a href="autos-productos/3Audi/prod-2.html">
                     <div id="audiImg2">
                         <img src="../../assets/imagenes/tienda/autos/audiA4 sedán.jpg" alt="">
                     </div>
@@ -181,8 +181,8 @@
                             <p>Las amplias tomas de aire y la extremadamente ancha parrilla crean una primera impresión poderosa, además disfrutarás de una generosa cantidad de espacio</p>
                         </div>
                     </div>
-                </div></a>
-                <a href="autos-productos/3Audi/prod-3.html"><div id="audi3">
+                </a></div>
+                <div id="audi3"><a href="autos-productos/3Audi/prod-3.html">
                     <div id="audiImg3">
                         <img src="../../assets/imagenes/tienda/autos/audiQ2.jpg" alt="">
                     </div>
@@ -203,11 +203,11 @@
                             <p>Tiene seis velocidades, 4,21 m de largo, 1,79 m de ancho y 1,51 m de alto y el espacio para el equipaje es de 1.050 [L] con los asientos abatidos y de 405 [L] sin abatirlos</p>
                         </div>
                     </div>
-                </div></a>
+                </a></div>
             </div>
             <div id="chevrolet">
                 <h2>Chevrolet</h2>
-                <a href="autos-productos/1Chevrolet/prod-1.html"><div id="chevr1">
+                <div id="chevr1"><a href="autos-productos/1Chevrolet/prod-1.html">
                     <div id="chevrImg1">
                         <img src="../../assets/imagenes/tienda/autos/chevrCRUZE RS.png" alt="">
                     </div>
@@ -228,8 +228,8 @@
                             <p>El diseño impresiona con sus líneas atrevidas, su techo solar y su parrilla frontal exclusiva, tiene 6 velocidades, WI-FI nativo y sistema de arranque remoto</p>
                         </div>
                     </div>
-                </div></a>
-                <a href="autos-productos/1Chevrolet/prod-2.html"><div id="chevr2">
+                </a></div>
+                <div id="chevr2"><a href="autos-productos/1Chevrolet/prod-2.html">
                     <div id="chevrImg2">
                         <img src="../../assets/imagenes/tienda/autos/chevrCRUZE-5.png" alt="">
                     </div>
@@ -250,8 +250,8 @@
                             <p>La parrilla frontal impresiona con sus detalles cromados, sumado a los faros traseros LED, una cámara frontal detecta los carriles, y un sistema de detección de colisiones frontales</p>
                         </div>
                     </div>
-                </div></a>
-                <a href="autos-productos/1Chevrolet/prod-3.html"><div id="chevr3">
+                </a></div>
+                <div id="chevr3"><a href="autos-productos/1Chevrolet/prod-3.html">
                     <div id="chevrImg3">
                         <img src="../../assets/imagenes/tienda/autos/chevrJOY-PLUS.png" alt="">
                     </div>
@@ -272,7 +272,7 @@
                             <p>Además de brindar más comodidad a toda tu familia, viene equipado con aire acondicionado, Bluetooth, 2 parlantes, levantavidrios eléctricos delanteros y Doble Airbag</p>
                         </div>
                     </div>
-                </div></a>
+                </a></div>
             </div>
             <div id="renault">
                 <h2>Renault</h2>
