Sigue en proceso (Odio cada segundo de mi existencia)

--- a/paginas/tienda/autos-productos/1Chevrolet/prod-1.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-1.html
@@ -164,10 +164,10 @@
         <div class="row prods__descripcion">
             <p>El Cruze RS forma parte de la familia Rally Sport de Chevrolet, y cuenta con toda la potencia para ser único. Más que una versión deportiva, en el Cruze RS todos los detalles hacen la diferencia, como las nuevas llantas oscurecidas de 17" y detalles en negro Ice Chrome en el frente. ¡Subite al tuyo!</p>
         </div>
-        <div class="prods__verMas">
-            <input type="radio" name="Boton" id="1" class="prods__btnVerMas"/>
-            <label for="1">Ver más</label>
-            <section class="prods__masInfo">
+
+        <details class="prods__btnVerMas">
+            <summary>Prueba 1</summary>
+            <div class="prods__masInfo">
                 <table>
                     <tr>
                         <td>Puertas:</td>
@@ -188,9 +188,8 @@
                 <video controls>
                     <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
                 </video>   
-            </section>
-    
-        </div>
+            </div>
+        </details>
     </main>
 </body>
 </html>
